<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:maxWidth="400dp"
            android:layout_height="wrap_content"
            android:background="@drawable/guidelines_dialog_background"
            android:orientation="vertical"
            android:padding="25dp">


            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:tint="@color/blue" />


            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="Filter"
                android:textColor="@color/darkergray"
                android:textSize="20sp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Event Type"
                    android:textColor="@color/darkergray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_event_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/touch_arrow"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupEventType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:chipSpacingHorizontal="8dp"
                app:chipSpacingVertical="8dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSports"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SPORTS"
                    android:textColor="@color/chip_text_selector"
                    app:chipBackgroundColor="@color/chip_background_selector"
                    app:chipStrokeWidth="0dp" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMusic"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MUSIC"
                    android:textColor="@color/chip_text_selector"
                    app:chipBackgroundColor="@color/chip_background_selector"
                    app:chipStrokeWidth="0dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipParty"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PARTY"
                    android:textColor="@color/chip_text_selector"
                    app:chipBackgroundColor="@color/chip_background_selector"
                    app:chipStrokeWidth="0dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCharity"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CHARITY"
                    android:textColor="@color/chip_text_selector"
                    app:chipBackgroundColor="@color/chip_background_selector"
                    app:chipStrokeWidth="0dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCultural"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="CULTURAL"
                    android:textColor="@color/chip_text_selector"
                    app:chipBackgroundColor="@color/chip_background_selector"
                    app:chipStrokeWidth="0dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMisc"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MISC"
                    android:textColor="@color/chip_text_selector"
                    app:chipBackgroundColor="@color/chip_background_selector"
                    app:chipStrokeWidth="0dp" />

            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Leave all unchecked to view all event types"
                android:textColor="@color/gray"
                android:layout_gravity="center"
                android:textSize="10sp"/>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <!-- Availability box -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Available Spaces"
                    android:textColor="@color/darkergray"
                    android:textSize="16sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/filterMinSpots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Min"
                        android:textSize="12sp"
                        android:padding="8dp"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/filterMaxSpots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Max"
                        android:textSize="12sp"
                        android:padding="8dp"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Leave blank for all capacity"
                android:textColor="@color/gray"
                android:layout_gravity="center"
                android:textSize="10sp"/>


            <!-- Available Date box -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Event Date range"
                    android:textColor="@color/darkergray"
                    android:textSize="16sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/filterMinEventDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Min"
                        android:textSize="12sp"
                        android:padding="8dp"
                        android:focusable="false"
                        android:clickable="true"
                        android:inputType="none"  />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/filterMaxEventDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Max"
                        android:textSize="12sp"
                        android:padding="8dp"
                        android:focusable="false"
                        android:clickable="true"
                        android:inputType="none"  />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text = "Leave blank for all Dates"
                android:textColor="@color/gray"
                android:layout_gravity="center"
                android:textSize="10sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/availableSpaceErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Minimum Available space cannot be greater \n than Max Available Space"
                android:textSize="11sp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/eventDateRangeErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Minimum Date cannot be greater than Max Available Date"
                android:textSize="11sp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <Button
                android:id="@+id/applyFiltersBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/blue"
                android:text="Apply Filters"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />



        </LinearLayout>

    </ScrollView>

</FrameLayout>

