<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/top_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/mango_shop_title"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/darkergray" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical|start">

            <ImageButton
                android:id="@+id/lotteryinfoButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/information_icon" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/scanQRButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/qr_logo"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical|end"
            android:paddingEnd="8dp">

            <ImageButton
                android:id="@+id/btnFilter"
                android:layout_width="93dp"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:src="@drawable/filter"
                app:tint="@color/blue" />


        </LinearLayout>

    </LinearLayout>

    <SearchView
        android:id="@+id/eventsSearch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:iconifiedByDefault="false"
        android:queryHint="Search Events"
        android:paddingStart="12dp"
        android:background="@drawable/search_background"
        android:elevation="4dp"
        app:strokeWidth="1dp"
        app:strokeColor="#66000000"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/textViewEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="No events available right now."
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="#999999"
            android:visibility="gone"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/bottom_nav_entrant" android:visibility="gone" />
        <include layout="@layout/bottom_nav_organizer" android:visibility="gone" />

    </FrameLayout>

</LinearLayout>