...
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/tv_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No description available"
            android:textSize="14sp"
            android:textColor="@color/darkergray"
            android:layout_marginTop="4dp"/>
...
